--- a/1. База/1. Основы/5. Строки в JavaScript.html
+++ b/1. База/1. Основы/5. Строки в JavaScript.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Строки в JavaScript</title>
 </head>
 <body>
   <script>
     /*
-    Запишите в переменную какую-нибудь строку. 
-    Выведите на экран длину вашей строки. 
+    Создайте строку с вашем именем и строку с вашей фамилией. 
+    Выведите эти данные на экран.
     */
-    const str = "Новая строка";
-    alert(str.length);
+    const str = 'Капурин';
+    alert(str);
   </script>
 </body>
 </html>
